--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   geolocator: ^6.1.13
   flutter_bloc: ^6.1.1
   equatable: ^1.2.5
+  transparent_image: ^1.0.0
+  flutter_tags: ^0.4.9+1
 
 dev_dependencies:
   flutter_test:
